test(#357) : 테스트 Disabled - 테스트에서 실제 api를 호출하여 Disabled하였어요. - 추후 단위테스트로 리팩토링 할 것입니다.